End of section 3

--- a/BethanysPieShopHRM/Pages/Index.razor
+++ b/BethanysPieShopHRM/Pages/Index.razor
@@ -2,8 +2,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome to Bethany's Pie Ship HRM!</h1>
 
-Welcome to your new app.
+USING THIS APPLICATON, YOU CAN MANAGE OUR WONDERFUL STAFF WORKING FO US ALL OVER THE WORLD, BRINGING PEOPLE HE BEST PIES EVER!
 
-<SurveyPrompt Title="How is Blazor working for you?" />
