--- a/BethanysPieShopHRM/Components/EmployeeCard.razor
+++ b/BethanysPieShopHRM/Components/EmployeeCard.razor
@@ -1,4 +1,5 @@
-﻿<div class="col">
+﻿
+<div class="col">
     <div class="card rounded-3 employee-card">
         <div class="card-header py-3">
             <h4>@Employee.FirstName @Employee.LastName</h4>
@@ -8,13 +9,11 @@
             <div class="mb-3">
                 <img src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{Employee.EmployeeId}.jpg")" class="employee-img rounded-circle img-fluid" />
             </div>
-          
-            <a href="@($"employeedetail/{Employee.EmployeeId}")" class="btn btn-outline-primary btn-sm mb-1">
-                Full details
-            </a>
-            @*            <button class="btn btn-outline-primary btn-sm mb-1" @onclick="(() => NavigateToDetails(Employee))">
+            <button class="btn btn-primary btn-sm mb-1" @onclick="@(async () => await EmployeeQuickViewClicked.InvokeAsync(Employee))"> Quick view</button>
+            
+                 <button class="btn btn-outline-primary btn-sm mb-1" @onclick="(() => NavigateToDetails(Employee))">
             Full details
-            </button>*@
+            </button>
         </div>
     </div>
 </div>
